--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - ./migrations:/app/migrations
     depends_on:
       - db
+      - jaeger
 
   db:
     image: postgres:latest
@@ -22,12 +23,13 @@ services:
       - ./postgres-data:/var/lib/postgresql/data
 
   jaeger:
-    image: jaegertracing/all-in-one:1.18
+    image: jaegertracing/all-in-one:latest
+    container_name: jaeger
     ports:
-      - 5775:5775/udp
-      - 6831:6831/udp
-      - 6832:6832/udp
-      - 5778:5778
-      - 16686:16686 # web
-      - 14268:14268
-      - 9411:9411
+      - '5775:5775/udp'
+      - '6831:6831/udp'
+      - '6832:6832/udp'
+      - '5778:5778'
+      - '16686:16686' # web
+      - '14268:14268'
+      - '9411:9411'
